<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">新聞推推樂</string>
    <string name="action_settings">設定</string>
    <string name="sViewNewsTitle">標題：</string>
    <string name="viewNews">查看新聞</string>
    <string name="viewNewsDatetime">時間：</string>
    <string name="viewNewsContentWait">讀取中，請稍候&#8230;</string>
    <string name="viewNewsContentEmpty">提示：請輸入 NID 以顯示新聞</string>
    <string name="title_activity_news_list">NewsList</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="list_type_today">今日推薦</string>
    <string name="filter_date">日期篩選</string>
    <string name="filter_rid">分類篩選</string>
    <string name="logoutConfirm">登出</string>
    <string name="confirmLogoutMessage">確定要登出嗎？</string>
    <string name="title_activity_about">關於</string>
    <string name="about0">關於：新聞推推樂</string>
    <string name="about">\t\t網路普及與資訊服務的蓬勃發展，使得網路上的資料量越來越大，如何有效的擷取出有意義的資訊是一項大課題，所以搜尋或推薦系統在目前網路服務研究上受到重視。 為了讓讀者可以快速地獲得自己有興趣的新聞，本專題研究主要探討針對讀者找出其閱報喜好進而快速尋找近期可能喜好的新聞文章，提出一個基於個人本體論的新聞推薦模式(RO-NRS, News Recommender System based on Personal Ontology)。</string>
    <string name="about2">\t\t以個人本體論為基礎，更引進了Hadoop平行運算，透過Hadoop平台提供的 MapReduce 架構，利用Tamer Elsayed等人於2008年所提的Inverted Index方法於MapReduce架構實作協同式過濾方法。</string>
    <string name="crew1">技術組：戴均民、林書緯</string>
    <string name="crew2">文件組：朱奕安、許芳甄</string>
    <string name="email">Issue Report: \n\t taichunmin@gmail.com</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="similar_setting_title">同好者推薦設定</string>
    <string name="similar_setting_describe">系統會為您找出與您最相似的三位使用者，並推薦您他們閱讀過的新聞。請在底下設定，系統為您推薦的新聞數量。\n(每項最大值100)</string>
    <string name="similar_setting_1st">相似者①</string>
    <string name="similar_setting_2st">相似者②</string>
    <string name="similar_setting_3st">相似者③</string>
    <string name="ontology_setting_title">個人化推薦設定</string>
    <string name="ontology_setting_describe">系統會根據您閱讀過的新聞，然後在今天的新聞中，推薦您可能會有興趣的新聞。\n(每項最大值100)</string>
    <string name="ontology_setting_limit">推薦數量</string>

</resources>